# interpnpy

./: .readthedocs.yml  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yml  test.yml
docs/: index.md  perf.md  requirements.txt
examples/: cubic_comparison.py
interpn/: __init__.py  multicubic_rectilinear.py  multicubic_regular.py  multilinear_rectilinear.py  multilinear_regular.py  raw.py  serialization.py
scripts/: profile_workload.py  run_pgo.py
src/: lib.rs
src/interpn/: multilinear_rectilinear.py  multilinear_regular.py
test/: bench.py  bench_cpu.py  bench_mem.py  test_docs.py  test_multicubic_regular.py  test_multilinear_rectilinear.py  test_multilinear_regular.py
