[package]
name = "_interpn"
version = "0.2.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_interpn"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py39"] }
numpy = "0.26.0"
interpn = {version = "0.5.0", default_features = false}
#interpn = { path = "../interpn/interpn" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
overflow-checks = true

[profile.dev]
opt-level = 3
codegen-units = 1
lto = true
